--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Federant&family=Mozilla+Headline:wght@200..700&display=swap" rel="stylesheet">
-    <title>TODO CAMPO</title>
-
+   <title>TODO CAMPO</title>
 </head>
 
 <body>
 
     <header>
-     <img src="logo.png" alt="Logo TODO CAMPO" class="logo-site">
-   <h1 class="site">TODO CAMPO</h1>
+      <img src="logo.png" alt="Logo TODO CAMPO" class="logo-site">
+   TODO CAMPO
     </header>
 
     <section class= chamada>
@@ -48,6 +47,18 @@
             <a href="https://youtu.be/Db2SIzz00_c?si=B__7NpMgFAKzVaiL">
             <img src=https://img.youtube.com/vi/Db2SIzz00_c/maxresdefault.jpg />
             </a>
+        </div>
+    </section>
+
+
+
+ <section class="categoria2">
+        <h2>Imagens</h2>
+        <hr>
+        <div class="categoria-imagens">
+            <img src="meio ambiente.jpg" />
+            <img src="meio ambiente.png" />
+          
         </div>
     </section>
 
